feat: Add development and production build tasks to VSCode configuration
docs: Create BUILD_STATUS.md to summarize build status and known issues

chore: Update ESLint configuration for improved code quality and compatibility

feat(api): Implement user check and fix routes for store and user accounts

feat: Create auth flow test page for user and store login/logout functionality

fix: Update landing page with dynamic rendering to resolve prerender issues

feat: Add simple home page for user and store access

chore: Implement scripts for fixing store user and testing authentication flows

test: Comprehensive testing for complete logout/login flow

--- a/fix-new-project-auth.html
+++ b/fix-new-project-auth.html
@@ -242,7 +242,7 @@
               '🍪 Auth Cookies',
               'error',
               'لا توجد cookies مصادقة',
-              'تسجيل دخول جديد مطلوب',
+              'تسجيل دخول جديد مطلوب'
             );
             return;
           }
@@ -260,7 +260,7 @@
                 '🔐 حالة المصادقة',
                 'error',
                 'غير مصادق على جانب العميل',
-                'إعادة تسجيل دخول',
+                'إعادة تسجيل دخول'
               );
               diagnosticData.authState = 'unauthenticated';
             }
@@ -291,28 +291,28 @@
               addResult(
                 '🖥️ مصادقة الخادم',
                 'success',
-                `مصادق بنجاح - User: ${data.user.data?.email}`,
+                `مصادق بنجاح - User: ${data.user.data?.email}`
               );
             } else if (data.session.exists && !data.user.exists) {
               addResult(
                 '🖥️ مصادقة الخادم',
                 'warning',
                 'Session موجودة لكن User غير متاح',
-                'مشكلة في استخراج بيانات المستخدم',
+                'مشكلة في استخراج بيانات المستخدم'
               );
             } else if (!data.session.exists && data.cookies.authCookies.length > 0) {
               addResult(
                 '🖥️ مصادقة الخادم',
                 'error',
                 'Cookies موجودة لكن Session غير صالحة',
-                'مشكلة في مزامنة Cookies بين العميل والخادم',
+                'مشكلة في مزامنة Cookies بين العميل والخادم'
               );
             } else {
               addResult(
                 '🖥️ مصادقة الخادم',
                 'error',
                 'لا توجد session أو cookies صالحة',
-                'تسجيل دخول جديد مطلوب',
+                'تسجيل دخول جديد مطلوب'
               );
             }
           } else {
@@ -352,7 +352,7 @@
                   '🆕 صفحة المشروع الجديد',
                   'error',
                   'يتم إعادة التوجيه إلى تسجيل الدخول',
-                  'هذه هي المشكلة الأساسية!',
+                  'هذه هي المشكلة الأساسية!'
                 );
               }
             } else {
@@ -433,7 +433,7 @@
               '❌ المشكلة مستمرة',
               'error',
               `إعادة توجيه إلى ${location}`,
-              'يجب حل مشكلة المصادقة',
+              'يجب حل مشكلة المصادقة'
             );
           } else {
             addLog(`❌ خطأ غير متوقع: ${response.status}`);
@@ -456,7 +456,7 @@
               '📍 الموقع الحالي',
               'warning',
               'لست في صفحة Dashboard',
-              'انتقل إلى Dashboard أولاً',
+              'انتقل إلى Dashboard أولاً'
             );
             return;
           }
