--- a/public/login-comparison-test.html
+++ b/public/login-comparison-test.html
@@ -237,7 +237,7 @@
             const isAuthCookie = name.includes('sb-') || name.includes('supabase');
             log(
               `  ${isAuthCookie ? '✅' : '❓'} ${name}: ${value}`,
-              isAuthCookie ? 'success' : 'info',
+              isAuthCookie ? 'success' : 'info'
             );
           }
         }
