--- a/test-browser-login.html
+++ b/test-browser-login.html
@@ -17,7 +17,7 @@
       const { createClient } = supabase;
       const supabaseClient = createClient(
         'https://rqcfcdubxpgzrxdmnwbu.supabase.co',
-        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJxY2ZjZHVieHBnenJ4ZG1ud2J1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzEzMzM2MDksImV4cCI6MjA0NjkwOTYwOX0.O7mGGdgUYbFNRjIzNh-4a15m7fVUvY6N-V2dHFRpj0w',
+        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJxY2ZjZHVieHBnenJ4ZG1ud2J1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzEzMzM2MDksImV4cCI6MjA0NjkwOTYwOX0.O7mGGdgUYbFNRjIzNh-4a15m7fVUvY6N-V2dHFRpj0w'
       );
 
       async function testLogin() {
