--- a/test-new-project-auth.html
+++ b/test-new-project-auth.html
@@ -237,7 +237,7 @@
               addResult(
                 '🆕 صفحة المشروع الجديد',
                 'error',
-                'يتم إعادة التوجيه إلى صفحة تسجيل الدخول - مشكلة في المصادقة',
+                'يتم إعادة التوجيه إلى صفحة تسجيل الدخول - مشكلة في المصادقة'
               );
             } else {
               addResult('🆕 صفحة المشروع الجديد', 'warning', `إعادة توجيه إلى: ${location}`);
